# solar_demo

./: .gitignore  CMakeLists.txt  README.md  constants.json  notebook.ipynb  setup.py  solar_data.csv
data/: alpha_centauri.json  constants.json  the_solar_system.json
data/alpha_centauri/: data.json
data/the_solar_system/: data.json
include/: AmbientStars.h  BitmapImages.h  Camera.h  CustomTypes.h  HeadsUpDisplay.h  KeyboardCallback.h  MenuScreen.h  MotionCallback.h  MouseCallback.h  MouseWheelCallback.h  PassiveMotionCallback.h  StellarObject.h  TextRendering.h  Textures.h  Timer.h  custom_types.h
src/: main.c  test_exhibit_skybox.c  test_texture.c  test_timespec.c
